--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,7 +1,7 @@
 
 <h1>Order</h1>
 <ul>
-  <li>Status: <%= @order.state %></li>
-  <li>Item: <%= @order.teddy_sku %></li>
+<!--   <li>Status: <%= @order %></li> -->
+<!--   <li>Item: <%= @order%></li> -->
   <li>Amount: <%= humanized_money_with_symbol(@order.amount) %></li>
 <ul>
