--- a/app/views/records/_records_list.html.erb
+++ b/app/views/records/_records_list.html.erb
@@ -2,29 +2,30 @@
 
 
 <div class="container">
-  <div class="row">
-    <div class="col-sm-3">
-      <div class="filter"><a>+ Filter:</a></div>
+  <div class="row filterrow">
+    <div class="col-xs-3 col-sm-1 leftpad">
+      <div class="filter"><a class="dark">Filter</a></div>
       <!-- <input type="text" id="q" class="form-control" /> -->
     </div>
 
-    <div class="hidden-xs col-sm-4">
-      <!-- <div id="pagination"></div> -->
+    <div class="col-xs-7 col-sm-4">
+      <div class="filter dark" id="temparature_montreal"></div>
     </div>
 
-    <div class="hidden-xs col-sm-2">
-      <img class="back-button" src="">
-    </div>
-
-    <div class="hidden-xs col-sm-2">
-      <div class="scroll-left">
-        <a style="color:#626262" href="https://tinyurl.com/y9cuey8t">
-          <p>Silence of The Lambi 10/27 @ Club Lambi</p>
+    <div class="hidden-xs col-sm-3">
+    <div class="scroll-left">
+        <a class="dark" href="https://tinyurl.com/y9cuey8t">
+         <!--  <p>Silence of The Lambi 10/27 @ Club Lambi</p> -->
         </a>
       </div>
+
     </div>
 
-    <div class="hidden-xs col-sm-1" id="pager">
+    <div class="col-xs-1 col-sm-4">
+
+    </div>
+
+    <div class="col-xs-1" id="pager">
       <div  id="hits-per-page-selector"></div>
     </div>
   </div>
@@ -45,7 +46,7 @@
   </div>
 
   <div class="col-xs-12 hidden-md">
-    <div id="pagination"></div>
+    <div class="centered" id="pagination"></div>
   </div>
 
 </div>
