--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,6 +31,8 @@
   </div>
   </div> -->
     <a class="menus" href="/pages/gear">Gear</a>
+    <a class="menus" href="https://www.facebook.com/pg/laramarecords/events/?ref=page_internal">Events</a>
+
     <a class="menus" href="/pages/aboutus">About</a></h2>
 
 
@@ -89,14 +91,12 @@
     <div class="dropdown2">
        <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu barr" style="text-align: Center; background-color: #292c2f">
-        <li><a href="/records/marketplace">Arrivals</a></li>
+        <li><a href="">Arrivals</a></li>
         <li><a href="https://www.facebook.com/pg/laramarecords/events/?ref=page_internal" >Events</a></li>
-      <li>
-   <a href="/records/search">Catalog⌄</a></li>
-
-
-         <li style="border-top-style: solid; border-top-color: #999999; border-top:width: .5px;"><a href="/pages/aboutus">About</a></li>
-           <li><a href="/records/crate">Cart </a></li>
+        <li><a href="">Catalog⌄</a></li>
+        <li><a href="/pages/gear">Gear</a></li>
+        <li style="border-top-style: solid; border-top-color: #999999; border-top:width: .5px;"><a href="/pages/aboutus">About</a></li>
+        <li><a href="/records/crate">Cart </a></li>
       </ul>
     </div>
   </div>
