--- a/app/views/records/crate.html.erb
+++ b/app/views/records/crate.html.erb
@@ -1,12 +1,12 @@
 <div class="container" style="margin-top:5em">
-<h1>Your Cart: <%= pluralize @records.size, "item" %></h1>
+<h1>Your Cart: <%= pluralize @carted.size, "item" %></h1>
   <div class="row">
 
   <table class="cart-list" style= "width: 90%">
     <tbody>
         <% grand = [] %>
 
-    <% @records.each do |record| %>
+    <% @carted.each do |record| %>
       <tr>
           <div>
           <a href='/records/<%=record.id%>'>
