--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -295,7 +295,7 @@ a:hover {
 // LINKS
 
 .filter {
-  font-size: .8em;
+  font-size: 14px;
   display: flex;
    flex-direction: row;
    justify-content: flex-start;
@@ -304,7 +304,7 @@ a:hover {
   a,  #temparature_montreal {
     border: solid 1px #d4d8e3!important;
   border-radius: 4px;
-  padding: 8px 16px 8px 16px;
+  padding: 7px 16px 7px 16px;
   box-shadow: 0 1px 1px 0 rgba(85,95,110,.2)!important;
   }
 }
@@ -392,19 +392,21 @@ a:hover {
   font-size:1.2em;
 }
 
-.ais-range-slider .rheostat-progress {
-    background-color: #ffee36!important;
-}
+
 
 .ais-range-slider--handle {
     width: 20px;
     height: 20px;
     position: relative;
     z-index: 1;
-    background: #fff;
-    border: 1px solid #626262;
+    background: #ffea36;
+    border: 5px solid #626262;
     border-radius: 50%;
     cursor: pointer;
+}
+
+.ais-range-slider .rheostat-progress {
+    background-color: #ffee36!important;
 }
 
 .pager {
@@ -897,6 +899,12 @@ img {
     .zoomrecord{
       padding: 0px;
     }
+
+
+    .list-group-item {
+    width: 50%;
+    padding: 5px 0px;
+  }
 }
 
 
