--- a/app/assets/stylesheets/components/_badges.scss
+++ b/app/assets/stylesheets/components/_badges.scss
@@ -4,6 +4,7 @@
   line-height: 30px;
   width: 30px;
   color: gray;
+  display: flex;
 }
 .badge {
   position: absolute;
@@ -35,4 +36,12 @@
 .badge-bordered {
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
+}
+
+.topbadge {
+  margin: 10px;
+}
+
+.fa-search{
+  color: #e9eae7;
 }
