--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,10 @@ $(document).ready(function() {
     $('.filter-drop').toggle(200);
   });
 
+       $('.navbar-wagon-right').on('click', () => {
+    $('.ais-search-box').toggle(200);
+  });
+
 
 
 
@@ -48,7 +52,7 @@ $(document).ready(function() {
     var search = instantsearch({
       appId: 'P1B024U2Z9',
       apiKey: 'e2a4822bc15df22e7b8ca22cca51b784',
-      indexName: 'Record_production',
+      indexName: 'Record_development',
       urlSync: true
     });
 
