--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
   <% end %>
 
   <!-- Right Navigation -->
-  <div class= "text-center hidden-xs" style="margin-left: 40px; color: #e9eae7">
+  <div class= "text-center hidden-xs" style="color: #e9eae7">
 
   <h2>
     <a class="menus" href="/pages/gear">Gear</a>
@@ -18,10 +18,8 @@
 
   </div>
 
+
   <div class="navbar-wagon-right">
-
-
-
 
 
   <div class="navbar-wagon-item navbar-wagon-link">
@@ -33,7 +31,6 @@
   </div>
 
     <!-- Search form -->
-
 
     <% if user_signed_in? %>
 
@@ -65,7 +62,7 @@
   </div>
 </div>
 
-<div class="searchbar">
+<div class="searchbar2">
   <input type="text" id="q" class="form-control" />
 </div>
 </div>
