--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -5,7 +5,7 @@
 <div style="border-radius:5px;" class="hidden-xs hidden-sm">
 <iframe src="https://snapwidget.com/embed/459159" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no"></iframe>
 </div>
-<div class="hidden-md hidden-lg hidden-xl" style="width:100%;"><img style="width:100%;" src = "https://i.imgur.com/QWJUFbC.png"></div>
+<div class="hidden-md hidden-lg hidden-xl" style="width:100%;"><img style="width:100%;" src = "https://i.imgur.com/D6UE7K0.jpg"></div>
 
 </div>
 
