--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,8 +59,7 @@ $(document).ready(function() {
     search.addWidget(
       instantsearch.widgets.searchBox({
         container: '#q',
-        placeholder: 'Inquiries',
-        autofocus: false,
+        autofocus: true,
         poweredBy: false
       })
     );
