--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -50,19 +50,19 @@
   <div class="navbar-wagon-item hidden-sm hidden-md hidden-lg" style="padding:0px">
     <div class="dropdown2">
        <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu barr" style="text-align: Center; background-color: #292c2f">
+      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu barr" style="text-align: Center; background-color: #292c2f; color: #e9eae7">
         <li><a href="">Arrivals</a></li>
         <li><a href="https://www.facebook.com/pg/laramarecords/events/?ref=page_internal" >Events</a></li>
-        <li><a href="">Catalog⌄</a></li>
+        <li><a href="">Catalog</a></li>
         <li><a href="/pages/gear">Gear</a></li>
-        <li style="border-top-style: solid; border-top-color: #999999; border-top:width: .5px;"><a href="/pages/aboutus">About</a></li>
+        <li><a href="/pages/aboutus">About</a></li>
         <li><a href="/records/crate">Cart </a></li>
       </ul>
     </div>
   </div>
 </div>
 
-<div class="searchbar2">
+<div class="searchbar">
   <input type="text" id="q" class="form-control" />
 </div>
 </div>
