--- a/app/assets/stylesheets/algolia.scss
+++ b/app/assets/stylesheets/algolia.scss
@@ -49,7 +49,8 @@
 
 
 .searchbar{
-    position: fixed;
+    display: none;
+    position: relative;
     left: 0px;
     padding: 30px;
     top: 5vh;
@@ -59,7 +60,7 @@
 }
 
 .ais-search-box {
-display: none;
+
  position: relative;
  max-width: 100%;
  width: 100%;
@@ -89,6 +90,9 @@ display: none;
     transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s, -webkit-box-shadow ease-in-out 0.15s;
 }
 
+#hits-per-page-selector{
+  padding-right: 5px;
+}
 
 @-webkit-keyframes sbx-reset-in{
   0%{-webkit-transform:translate3d(-20%,0,0);
@@ -99,7 +103,9 @@ display: none;
     opacity:0}to{-webkit-transform:none;transform:none;opacity:1}}
 .ais-search-box{
   position:relative;
-  width:100%}
+  width:100%;
+      height: 50px;
+}
 .ais-search-box--input{
   padding-left:24px;height:100%;width:100%
 }
