--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,7 +88,12 @@ padding-right: 10px;
   flex-direction: column;
 }
 
+.description > p {
+  font-size: 1.2em;
+}
+
 .tracks{
+  padding: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -101,6 +106,7 @@ padding-right: 10px;
 }
 
 .zoomrecord{
+  padding-left:0px;
   margin-left:0px;
   margin-right:0px;
   margin-top:5px;
@@ -150,7 +156,7 @@ display: flex;
 tbody{
     display: table-row-group;
     vertical-align: middle;
-    border-color: inherit
+    border-color: inherit;
 }
 
 tr {
@@ -218,6 +224,14 @@ a:hover {
   color: #e9eae7 !important;
 }
 
+
+.add{
+  padding-right:0px;
+}
+
+.add > form{
+  float:right;
+}
 
 .dark{
   color:#626262;
@@ -776,6 +790,48 @@ img {
     width: 50%;
     padding: 5px 0px;
   }
+
+  .video {
+    position: relative;
+    height: 325px;
+    width: 325px;
+}
+
+  .video__youtube {
+    padding-bottom: 100%;
+    width: 325px;
+    height: 325px;
+    overflow: hidden;
+    position: relative;
+    -o-object-fit: cover;
+    object-fit: cover;
+}
+
+  .video__placeholder {
+    width: 100%;
+    position: absolute;
+    height: 325px;
+    width: 325px;
+}
+    .video__iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 325px;
+    height: 325px;
+}
+
+  .description {
+    text-align: center;
+    padding: 0px;
+    justify-content: center;
+    align-items: center;
+    }
+
+    .description > p {
+  font-size: 1em;
+}
+
 }
 
 
