--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@ $(document).ready(function() {
   });
 
        $('.navbar-wagon-right').on('click', () => {
-    $('.ais-search-box').toggle(200);
+    $('.searchbar').toggle(100);
   });
 
 
