--- a/app/views/records/_records_list.html.erb
+++ b/app/views/records/_records_list.html.erb
@@ -45,7 +45,7 @@
     </div>
   </div>
 
-  <div class="col-xs-12 hidden-md">
+  <div class="col-xs-12 hidden-md pages">
     <div class="centered" id="pagination"></div>
   </div>
 
