--- a/app/assets/stylesheets/algolia.scss
+++ b/app/assets/stylesheets/algolia.scss
@@ -14,10 +14,22 @@
 
 }
 
+.ais-pagination {
+    background: #fff;
+    -webkit-box-shadow: 0 1px 1px 0 rgba(85,95,110,.2);
+    box-shadow: 0 1px 1px 0 rgba(85,95,110,.2);
+    border: solid 1px #d4d8e3;
+    border-radius: 4px;
+    display: inline-block;
+    padding: 8px 5px;
+    width: 100%;
+}
+
 .ais-pagination--item__active {
     background: #626262;
     color: #ffee36
 }
+
 
 .descr{
   height: 8vh;
