--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -376,6 +376,7 @@ a:hover {
 .filter-drop {
   display: none;
   padding: 0px;
+  padding-top: 5px;
 }
 
 .search-drop {
@@ -793,7 +794,7 @@ img {
 
     .list-group-item {
     width: 50%;
-    padding: 5px 0px;
+    padding: 3px 0px;
   }
 
   .video {
