--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -43,9 +43,19 @@ h2 {
   color:#ffee36;
 }
 
+
+.rightside{
+  padding-right:15px;
+}
+
+.hamburger{
+  padding:0px;
+  padding-right:10px;
+}
 /* Navbar logo */
 .navbar-wagon-brand img {
   height:7vh;
+  padding-left:10px;
 }
 
 /* Navbar right section (with form, links, button) */
