--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -98,7 +98,8 @@ padding-right: 10px;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-bottom:10px; height:35vh
+
+
 }
 
 .listings{
@@ -122,13 +123,22 @@ padding-right: 10px;
 
 
 .centers{
+      margin-top: 10px;
       display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
 }
 
+.centering{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-self: center;
+}
+
+
  .filterrow{
+
 display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -149,7 +159,6 @@ display: flex;
   display: block;
   overflow-y: scroll;
   overflow:auto;
-  height: 30vh;
 }
 
 
@@ -171,8 +180,8 @@ table {
   width: 100%;
   // border-collapse: collapse;
   th, td {
-  border-bottom: 1px solid #333333;
-  border-top: 1px solid #333333;
+  border-bottom: solid 1px #d4d8e3 !important;
+  border-top: solid 1px #d4d8e3 !important;
   padding: 0px;
   }
   tr:nth-child(even) {
@@ -226,6 +235,7 @@ a:hover {
 
 
 .add{
+  padding-left: 5px;
   padding-right:0px;
 }
 
@@ -242,8 +252,10 @@ a:hover {
 }
 
 .money{
-  font-size:40px;
-  padding-left:0px
+
+  font-size:1.8em;
+  padding-left:0px;
+  padding-right:0px;
 }
 
 .yells {
@@ -889,6 +901,20 @@ img {
 
 
 
-
+.btn-cool {
+    /* color: #646464; */
+    /* border: 1px solid #999999; */
+    /* padding: 10px 15px; */
+    /* border-radius: 50px; */
+    /* font-weight: lighter; */
+    color: #333333;
+    opacity: 0.9;
+    border: solid 1px #d4d8e3 !important;
+    border-radius: 4px;
+    padding: 7px 7px 7px 7px;
+    -webkit-box-shadow: 0 1px 1px 0 rgba(85, 95, 110, 0.2) !important;
+    box-shadow: 0 1px 1px 0 rgba(85, 95, 110, 0.2) !important;
+    background-color: white;
+}
 
 
