--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,6 +10,7 @@
   <div class= "text-center hidden-xs" style="color: #e9eae7">
 
   <h2>
+  <!--   <a class="menus" href="/pages/home">Catalog</a> -->
     <a class="menus" href="/pages/gear">Gear</a>
     <a class="menus" href="https://www.facebook.com/pg/laramarecords/events/?ref=page_internal">Events</a>
 
