--- a/app/views/records/_records_list.html.erb
+++ b/app/views/records/_records_list.html.erb
@@ -8,7 +8,7 @@
       <!-- <input type="text" id="q" class="form-control" /> -->
     </div>
 
-    <div class="col-xs-7 col-sm-4">
+    <div class="col-xs-7 col-sm-4 leftpad">
       <div class="filter dark" id="temparature_montreal"></div>
     </div>
 
