--- a/app/assets/stylesheets/algolia.scss
+++ b/app/assets/stylesheets/algolia.scss
@@ -289,7 +289,7 @@
     }
     .ais-range-slider--tooltip{
       position:absolute;
-      background:#fff;
+      background-color: transparent;
       top:-22px;
       font-size:.8em
     }
