--- a/app/assets/stylesheets/youtube.scss
+++ b/app/assets/stylesheets/youtube.scss
@@ -2,11 +2,11 @@
 #player {
  padding-top:15px;
 width: 100%;
-height:35vh;
+height:350px;
 }
 .video {
     position: relative;
-    height: 35vh;
+    height: 350px;
 }
 
 .video__iframe {
@@ -14,19 +14,19 @@ height:35vh;
   top: 0;
   left: 0;
   width: 100%;
-  height: 35vh;
+  height: 350px;
 }
 
 .video__placeholder {
   width: 100%;
     position: absolute;
-    height: 35vh;
+    height: 350px;
 }
 
 .video__youtube {
     padding-bottom: 100%;
     width: 100%;
-    height: 35vh;
+    height: 350px;
     overflow: hidden;
   position: relative;
     object-fit: cover;
