--- a/app/views/records/_records_list.html.erb
+++ b/app/views/records/_records_list.html.erb
@@ -32,7 +32,7 @@
 
 
   <div class="row">
-    <div class="col-xs-12 filter-drop" id="facets">
+    <div class="col-xs-12 filter-drop showpanel" id="facets">
       <div id="genre"></div>
       <div id="prices"></div>
     </div>
