--- a/app/assets/stylesheets/algolia.scss
+++ b/app/assets/stylesheets/algolia.scss
@@ -341,6 +341,10 @@ input[type="radio"], input[type="checkbox"] {
     align-items: center;
 }
 
+.ais-refinement-list--item {
+    line-height: 15px;
+}
+
 .ais-pagination--item {
     display: inline-block;
     padding: 2px;
@@ -352,4 +356,22 @@ input[type="radio"], input[type="checkbox"] {
     font-size: 12px;
     text-align: center;
     width: 24px;
+}
+
+
+.list-group-item {
+    position: relative;
+    display: inline-block;
+    margin-bottom: 0px;
+    padding: 5px 10px;
+    background-color: #fff;
+    border: none;
+    width: 14%;
+}
+
+label {
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: normal;
 }
