--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -6,6 +6,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  height: 350px;
+      border-left: solid 1px #d4d8e3 !important;
 }
 
 
