--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -588,6 +588,12 @@ img {
 }
 }
 
+@media (min-width: 768px){
+.container {
+    width: auto;
+}
+}
+
 @media screen and (max-width: 778px) {
     .modal-content {
         width: 100%;
